--- a/index.html
+++ b/index.html
@@ -3,75 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoTech Solutions</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #35a79c;
-            color: #ffffff;
-            text-align: center;
-            padding: 1rem;
-        }
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1, h2 {
-            color: #35a79c;
-        }
-        .cta {
-            background-color: #ffffff;
-            border-radius: 5px;
-            padding: 2rem;
-            margin-top: 2rem;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-        input, button {
-            margin: 0.5rem 0;
-            padding: 0.5rem;
-        }
-        button {
-            background-color: #35a79c;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
+    <title>Safe Weather Solutions</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>EcoTech Solutions</h1>
+        <h1>Safe Weather Solutions</h1>
+        <p>Your trusted source for wildfire updates and preparedness tips.</p>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="wildfire-updates.html">Wildfire Updates</a>
+        <a href="faq.html">FAQ</a>
+        <a href="tips.html">Preparedness Tips</a>
+        <a href="resources.html">Resources</a>
+        <a href="contact.html">Contact Us</a>
+    </nav>
     <main>
-        <h2>Revolutionizing Sustainability with Technology</h2>
-        <p>At EcoTech Solutions, we're committed to developing innovative technologies that promote sustainability and reduce environmental impact. Our team of experts combines cutting-edge tech with eco-friendly practices to create solutions for a greener future.</p>
-        
-        <h2>Our Services</h2>
-        <ul>
-            <li>Smart energy management systems</li>
-            <li>Waste reduction and recycling technologies</li>
-            <li>Sustainable urban planning solutions</li>
-            <li>Green transportation innovations</li>
-        </ul>
-        
-        <div class="cta">
-            <h2>Stay Updated</h2>
-            <p>Join our mailing list to receive the latest news and updates about our eco-friendly innovations.</p>
-            <form action="https://formspree.io/f/your-formspree-endpoint" method="POST">
-                <input type="email" name="email" placeholder="Enter your email" required>
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
+        <h2>Welcome to Safe Weather Solutions</h2>
+        <p>Stay informed about wildfires, learn how to prepare, and access resources to protect yourself and your community.</p>
     </main>
+    <footer>
+        <p>&copy; 2025 Safe Weather Solutions. All rights reserved.</p>
+    </footer>
 </body>
 </html>
