--- a/root/faq.html
+++ b/root/faq.html
@@ -1,33 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
-    <header>
-        <h1>Safe Weather Solutions</h1>
-        <p>Frequently Asked Questions</p>
-    </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="wildfire-updates.html">Wildfire Updates</a>
-        <a href="faq.html">FAQ</a>
-        <a href="tips.html">Preparedness Tips</a>
-        <a href="resources.html">Resources</a>
-        <a href="contact.html">Contact Us</a>
-    </nav>
-    <main>
-        <h2>Frequently Asked Questions</h2>
-        <h3>What should I do if I receive an evacuation order?</h3>
-        <p>Evacuate immediately and follow the designated routes. Delaying can increase your risk.</p>
-        <h3>How can I protect my home from wildfires?</h3>
-        <p>Maintain defensible space by clearing vegetation, and use fire-resistant building materials.</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 Safe Weather Solutions. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #f4f4f4;
+    padding: 20px;
+}
+
+.container {
+    background: white;
+    padding: 20px;
+    max-width: 400px;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+input {
+    padding: 10px;
+    width: 80%;
+    margin: 10px 0;
+}
+
+button {
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+#result {
+    margin-top: 20px;
+    display: none;
+}
+
+ul {
+    text-align: left;
+}
